--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -49,6 +49,7 @@ jobs:
           curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
           sudo apt install -y nodejs
           sudo npm install web3
+          sudo npm install --save-dev @nomicfoundation/hardhat-toolbox
           sudo npm install --save-dev hardhat
 
       - name: Deploy contract to devnet
